clmrpc: add ReservedValue to listorders
